melior/src/dialect/snapshots/melior__dialect__cf__tests__compile_assert.snap
---
source: melior/src/dialect/cf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %true = arith.constant true
    cf.assert %true, "assert message"
    return
  }
}

