melior/src/dialect/snapshots/melior__dialect__cf__tests__compile_br.snap
---
source: melior/src/dialect/cf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %idx1 = index.constant 1
    cf.br ^bb1(%idx1 : index)
  ^bb1(%0: index):  // pred: ^bb0
    return
  }
}

